// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Box > it works with elevations 1`] = `
<div
  class="_this_a92f34 _elevation-none_a92f34 _gutter-none_a92f34 _gutterX-none_a92f34 _gutterY-none_a92f34"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with elevations 2`] = `
<div
  class="_this_a92f34 _elevation-small_a92f34 _gutter-none_a92f34 _gutterX-none_a92f34 _gutterY-none_a92f34"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with elevations 3`] = `
<div
  class="_this_a92f34 _elevation-medium_a92f34 _gutter-none_a92f34 _gutterX-none_a92f34 _gutterY-none_a92f34"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with elevations 4`] = `
<div
  class="_this_a92f34 _elevation-large_a92f34 _gutter-none_a92f34 _gutterX-none_a92f34 _gutterY-none_a92f34"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterXs 1`] = `
<div
  class="_this_a92f34 _elevation-none_a92f34 _gutter-none_a92f34 _gutterX-none_a92f34 _gutterY-none_a92f34"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterXs 2`] = `
<div
  class="_this_a92f34 _elevation-none_a92f34 _gutter-none_a92f34 _gutterX-small_a92f34 _gutterY-none_a92f34"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterXs 3`] = `
<div
  class="_this_a92f34 _elevation-none_a92f34 _gutter-none_a92f34 _gutterX-medium_a92f34 _gutterY-none_a92f34"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterXs 4`] = `
<div
  class="_this_a92f34 _elevation-none_a92f34 _gutter-none_a92f34 _gutterX-large_a92f34 _gutterY-none_a92f34"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterYs 1`] = `
<div
  class="_this_a92f34 _elevation-none_a92f34 _gutter-none_a92f34 _gutterX-none_a92f34 _gutterY-none_a92f34"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterYs 2`] = `
<div
  class="_this_a92f34 _elevation-none_a92f34 _gutter-none_a92f34 _gutterX-none_a92f34 _gutterY-small_a92f34"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterYs 3`] = `
<div
  class="_this_a92f34 _elevation-none_a92f34 _gutter-none_a92f34 _gutterX-none_a92f34 _gutterY-medium_a92f34"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterYs 4`] = `
<div
  class="_this_a92f34 _elevation-none_a92f34 _gutter-none_a92f34 _gutterX-none_a92f34 _gutterY-large_a92f34"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutters 1`] = `
<div
  class="_this_a92f34 _elevation-none_a92f34 _gutter-none_a92f34 _gutterX-none_a92f34 _gutterY-none_a92f34"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutters 2`] = `
<div
  class="_this_a92f34 _elevation-none_a92f34 _gutter-small_a92f34 _gutterX-none_a92f34 _gutterY-none_a92f34"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutters 3`] = `
<div
  class="_this_a92f34 _elevation-none_a92f34 _gutter-medium_a92f34 _gutterX-none_a92f34 _gutterY-none_a92f34"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutters 4`] = `
<div
  class="_this_a92f34 _elevation-none_a92f34 _gutter-large_a92f34 _gutterX-none_a92f34 _gutterY-none_a92f34"
  data-testid="Box"
>
  Hello world
</div>
`;
